# desert-player

./: .gitignore  CMakeLists.txt  LICENSE
debian/: changelog  control  debhelper-build-stamp  desert-player.desktop  files  rules
src/: main.cpp  resources.qrc
src/app/: app.cpp  app.h  config.cpp  config.h  logger.cpp  logger.h
src/data/: base.cpp  base.h  data.cpp  data.h  types.cpp  types.h
src/data/sql/: v_1.sql  v_2.sql
src/files/: identify.cpp  identify.h  meta.cpp  meta.h
src/player/: audio_list.cpp  audio_list.h  mpv_controller.cpp  mpv_controller.h  mpv_player.cpp  mpv_player.h  mpv_renderer.cpp  mpv_renderer.h  subtitle_list.cpp  subtitle_list.h  video_list.cpp  video_list.h
src/ui/: keep_alive.cpp  keep_alive.h  window_controller.cpp  window_controller.h
src/ui/qml/: AudioMenu.qml  ContinueControls.qml  Files.qml  FilesMenu.qml  Library.qml  Player.qml  Playlist.qml  SubtitleMenu.qml  TransportControls.qml  VideoMenu.qml  main.qml
